# AddInNativeTemplate

./: .gitignore  CMakeLists.txt  Component.cpp  ComponentBaseImpl.cpp  ComponentBaseImpl.def  ComponentBaseImpl.h  Map.h  README.md  dllmain.cpp  register.h
include/: types.h
